--- a/css/agency.css
+++ b/css/agency.css
@@ -266,6 +266,7 @@ fieldset[disabled] .btn-xl.active {
 header {
     text-align: center;
     color: #131313;
+   background-image: url(../img/bg.jpg);
     background-attachment: scroll;    
     background-position: center center;
     background-repeat: none;
@@ -323,6 +324,14 @@ header .intro-text .intro-heading {
 
 section {
     padding: 100px 0;
+}
+
+ #services{
+   background-color: #CBCEFF;
+}
+
+#about{
+   background-color: #C7FCED; 
 }
 
 section h2.section-heading {
@@ -653,7 +662,7 @@ aside.clients img {
 }
 
 section#contact {
-    background-color: #C9CBD0;    
+    background-color: #C3DDFF;    
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -719,6 +728,7 @@ section#contact .text-danger {
 footer {
     padding: 25px 0;
     text-align: center;
+    background-color: #7197DD;
 }
 
 footer span.copyright {
